--- a/theme/variables.scss
+++ b/theme/variables.scss
@@ -23,11 +23,11 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #3F51B5,
+  secondary:  #536DFE,
+  danger:     #F8BBD0,
+  light:      #C5CAE9,
+  dark:       #303F9F
 );
 
 
