--- a/pages/carrito/carrito.scss
+++ b/pages/carrito/carrito.scss
@@ -2,4 +2,8 @@ page-carrito {
     position: fixed !important;
     bottom: 2vh !important;
     width: 100% !important;
+
+    button{
+        margin-top: 3px !important;
+    }
 }
