--- a/app/app.scss
+++ b/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/v2/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +12,10 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.tabs-md .tab-button {
+    padding: 0px !important;
+}
+
+.tab-button-text, .tabs-md .tab-button[aria-selected=true] .tab-button-text, .tabs-md .tab-button[aria-selected=true] .tab-button-text{
+    margin: 0px !important;
+}
