--- a/pages/producto-lista/producto-lista.scss
+++ b/pages/producto-lista/producto-lista.scss
@@ -1,14 +1,4 @@
-page-inicio {
-    ion-slides {
-        .hide {
-            display: block !important; // override "display: none"
-        }
-        .swiper-pagination-bullet {
-            background-color: #fff;
-            box-shadow: 0px 0px 2px #000000;
-        }
-        height: 50%;
-    }
+page-producto-lista {
     ion-list {
         display: flex;
         flex-wrap: wrap;
@@ -38,10 +28,9 @@ page-inicio {
             }
         }
     }
-}
-
-.card-md+ion-card,
-.card-ios+ion-card,
-.card-wp+ion-card {
-    margin-top: 10px !important;
+    .card-md+ion-card,
+    .card-ios+ion-card,
+    .card-wp+ion-card {
+        margin-top: 10px !important;
+    }
 }
