--- a/app/app.scss
+++ b/app/app.scss
@@ -19,3 +19,8 @@
 .tab-button-text, .tabs-md .tab-button[aria-selected=true] .tab-button-text, .tabs-md .tab-button[aria-selected=true] .tab-button-text{
     margin: 0px !important;
 }
+
+.content-md, .content-ios, .content-wp{
+    /*background-image: url('../assets/img/otis_redding.png');*/
+    /*background-color: #E0E0E0;*/
+}
