--- a/pages/carrito/carrito.scss
+++ b/pages/carrito/carrito.scss
@@ -6,4 +6,8 @@ page-carrito {
     button{
         margin-top: 3px !important;
     }
+
+    .button-md, .button-wp{
+        margin-top: 1rem !important;
+    }
 }
