--- a/pages/producto-lista/producto-lista.scss
+++ b/pages/producto-lista/producto-lista.scss
@@ -18,8 +18,8 @@ page-producto-lista {
         }*/
         ion-card,
         ion-card-content {
-            width: calc(50vw - 40px) !important;
-            height: calc(50vw - 40px) !important;
+            width: calc(40vw) !important;
+            height: calc(40vw) !important;
             border: none !important;
             img {
                 width: 100%;
