--- a/pages/inicio/inicio.scss
+++ b/pages/inicio/inicio.scss
@@ -7,6 +7,12 @@ page-inicio {
             background-color: #fff;
             box-shadow: 0px 0px 2px #000000;
         }
+        img {
+            /* width: calc(50vw - 40px) !important; */
+            height: 60vw !important;
+            object-fit: cover;
+            /*margin-top: 10px !important;*/
+        }
         height: 50%;
     }
     ion-list {
@@ -26,16 +32,24 @@ page-inicio {
                 text-align: center;
             }
         }*/
-        ion-card,
-        ion-card-content {
-            width: calc(50vw - 40px) !important;
-            height: calc(50vw - 40px) !important;
+        ion-card {
+            width: calc(40vw) !important;
+            height: calc(40vw) !important;
             border: none !important;
+        }
+        ion-card-content {
+            width: calc(40vw) !important;
+            height: calc(25vw) !important;
+            border: none !important;
+            padding: 0px 5px !important;
             img {
                 width: 100%;
-                height: 60%;
+                height: 100%;
                 object-fit: cover;
             }
+        }
+        .item-md.item-block .item-inner {
+             padding-right: 0px !important; 
         }
     }
 }
