--- a/pages/carrito/carrito.scss
+++ b/pages/carrito/carrito.scss
@@ -10,4 +10,12 @@ page-carrito {
     .button-md, .button-wp{
         margin-top: 1rem !important;
     }
+
+    .item-divider{
+        border-radius: 5px !important;
+    }
+
+    img{
+        border-radius: 5px !important;
+    }
 }
