--- a/app/app.scss
+++ b/app/app.scss
@@ -16,11 +16,49 @@
     padding: 0px !important;
 }
 
-.tab-button-text, .tabs-md .tab-button[aria-selected=true] .tab-button-text, .tabs-md .tab-button[aria-selected=true] .tab-button-text{
+.tab-button-text,
+.tabs-md .tab-button[aria-selected=true] .tab-button-text,
+.tabs-md .tab-button[aria-selected=true] .tab-button-text {
     margin: 0px !important;
 }
 
-.content-md, .content-ios, .content-wp{
+.content-md,
+.content-ios,
+.content-wp {
     /*background-image: url('../assets/img/otis_redding.png');*/
     /*background-color: #E0E0E0;*/
+}
+
+.toolbar-background {
+    background-color: #2c3e50;
+    /*background-color: #2d364b;*/
+}
+
+.toolbar-title {
+    color: #e4e4e4 !important;
+}
+
+
+/*.tab-button {
+    background-color: white !important;
+}*/
+
+.tab-button[aria-selected=true] {
+    color: white !important;
+}
+
+/*.tab-button {
+    color: #2d364b !important;
+}*/
+
+.tabbar {
+    /*background: #34495e !important;*/
+    background-color: #2d364b !important;
+}
+
+.bar-button-default-md,
+.bar-button-clear-md-default,
+.bar-button-md-default {
+    color: #ffffff;
+    background-color: transparent;
 }
