--- a/pages/inicio/inicio.scss
+++ b/pages/inicio/inicio.scss
@@ -5,11 +5,11 @@ page-inicio {
         }
         .swiper-pagination-bullet {
             background-color: #fff;
-            box-shadow: 0px 0px 2px #000000;
+            box-shadow: 3px 3px 3px #000000;
         }
         img {
             /* width: calc(50vw - 40px) !important; */
-            height: 60vw !important;
+            height: 72vw !important;
             object-fit: cover;
             /*margin-top: 10px !important;*/
         }
@@ -19,41 +19,46 @@ page-inicio {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        /*ion-card {
-            width: calc(50vw - 24px);
-            height: calc(50vw - 24px);
-            border: none !important;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            margin-bottom: 16px;
-            .item-inner {
-                border-bottom: none;
-            }
-            .input-wrapper {
-                text-align: center;
-            }
-        }*/
+
         ion-card {
-            width: calc(40vw) !important;
+            width: calc(49vw) !important;
             height: calc(40vw) !important;
             border: none !important;
-        }
-        ion-card-content {
-            width: calc(40vw) !important;
-            height: calc(25vw) !important;
-            border: none !important;
-            padding: 0px 5px !important;
+            border-radius: 5px !important;
+            margin: 0px !important;
+            margin-top: 10px !important;
             img {
                 width: 100%;
-                height: 100%;
+                height: 50%;
                 object-fit: cover;
+                margin-bottom: 3px;
             }
         }
+        /*Contenido de la card*/
+        ion-card-content {
+            height: calc(20vw) !important;
+            border: none !important;
+            padding: 0px 5px !important;
+        }
         .item-md.item-block .item-inner {
-             padding-right: 0px !important; 
+            padding-right: 0px !important;
         }
     }
 }
 
+/*La paginacion del slider*/
+.swiper-container-horizontal>.swiper-pagination {
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+}
+
+/*Paddin izquierdo y derecho al item de productos destacados*/
+.item-md, .item-ios, .item-wp{
+    padding: 0px 16px !important;
+}
+
+/*Para que no agregue margin de mas a la primer card*/
 .card-md+ion-card,
 .card-ios+ion-card,
 .card-wp+ion-card {
