--- a/pages/producto-lista/producto-lista.scss
+++ b/pages/producto-lista/producto-lista.scss
@@ -1,21 +1,8 @@
 page-producto-lista {
-    ion-list {
+    /*ion-list {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        /*ion-card {
-            width: calc(50vw - 24px);
-            height: calc(50vw - 24px);
-            border: none !important;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            margin-bottom: 16px;
-            .item-inner {
-                border-bottom: none;
-            }
-            .input-wrapper {
-                text-align: center;
-            }
-        }*/
         ion-card,
         ion-card-content {
             width: calc(40vw) !important;
@@ -27,10 +14,45 @@ page-producto-lista {
                 object-fit: cover;
             }
         }
+    }*/
+    ion-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        ion-card {
+            width: calc(49.5vw) !important;
+            height: calc(40vw) !important;
+            border: none !important;
+            border-radius: 5px !important;
+            margin: 0px !important;
+            margin-top: 5px !important;
+            img {
+                width: 100%;
+                height: 50%;
+                object-fit: cover;
+                margin-bottom: 3px;
+            }
+        }
+        /*Contenido de la card*/
+        ion-card-content {
+            height: calc(20vw) !important;
+            border: none !important;
+            padding: 0px 5px !important;
+        }
+        .item-md.item-block .item-inner {
+            padding-right: 0px !important;
+        }
     }
+    /*Paddin izquierdo y derecho al item de productos destacados*/
+    .item-md,
+    .item-ios,
+    .item-wp {
+        padding: 0px 16px !important;
+    }
+    /*Para que no agregue margin de mas a la primer card*/
     .card-md+ion-card,
     .card-ios+ion-card,
     .card-wp+ion-card {
-        margin-top: 10px !important;
+        margin-top: 5px !important;
     }
 }
